Hystrix断路器的服务降级

--- a/microservicecloud/microservicecloud-provider-dept-hystrix-8001/src/main/resources/application.properties
+++ b/microservicecloud/microservicecloud-provider-dept-hystrix-8001/src/main/resources/application.properties
@@ -1,49 +1,51 @@
-#¹¤³Ì¶Ë¿ÚºÅ
+#å·¥ç¨‹ç«¯å£å·
 server.port=8001
 
-#mybatisµÄÅäÖÃ
-# mybatisÅäÖÃÎÄ¼şËùÔÚÂ·¾¶
+#mybatisçš„é…ç½®
+# mybatisé…ç½®æ–‡ä»¶æ‰€åœ¨è·¯å¾„
 mybatis.config-location=classpath:mybatis/mybatis.cfg.xml
-# ËùÓĞEntity±ğÃûÀàËùÔÚ°ü
+# æ‰€æœ‰Entityåˆ«åç±»æ‰€åœ¨åŒ…
 mybatis.type-aliases-package=src.main.java.cn.test.springcloud.entities
-# mapperÓ³ÉäÎÄ¼ş
+# mapperæ˜ å°„æ–‡ä»¶
 mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
 
 
-#Êı¾İ¿âµÄÏà¹ØÅäÖÃ
-#×¢²áµ½eurekaµÄÃû³Æ
+#æ•°æ®åº“çš„ç›¸å…³é…ç½®
+#æ³¨å†Œåˆ°eurekaçš„åç§°
 spring.application.name=microservicecloud-dept
 
-#eurekaµÄÏà¹ØÅäÖÃ
-#¿Í»§¶Ë×¢²á½øeureka·şÎñÁĞ±íÄÚ
+#eurekaçš„ç›¸å…³é…ç½®
+#å®¢æˆ·ç«¯æ³¨å†Œè¿›eurekaæœåŠ¡åˆ—è¡¨å†…
 #eureka.client.service-url.defaultZone=http://localhost:7001/eureka
 eureka.client.service-url.defaultZone=http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
-#ĞŞ¸Ä×¢²áeurekaÄÚµÄ·şÎñÃû³Æ
+#ä¿®æ”¹æ³¨å†Œeurekaå†…çš„æœåŠ¡åç§°
 eureka.instance.instance-id=microservicecloud-dept8001-hystrix
-#·ÃÎÊÂ·¾¶¿ÉÒÔÏÔÊ¾IPµØÖ·
+#è®¿é—®è·¯å¾„å¯ä»¥æ˜¾ç¤ºIPåœ°å€
 eureka.instance.prefer-ip-address=true
-#Î¢·şÎñinfoÄÚÈİÏêÏ¸ĞÅÏ¢
+#å¾®æœåŠ¡infoå†…å®¹è¯¦ç»†ä¿¡æ¯
 info.app.name = test-microservicecloud
 info.company.name = www.test.cn
 info.build.artifactId = $project.artifactId$
 info.build.version = $project.version$
 
-#Êı¾İ¿âµÄÏà¹ØÅäÖÃ
-#Êı¾İÔ´
+#æ•°æ®åº“çš„ç›¸å…³é…ç½®
+#æ•°æ®æº
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#Á¬½Ó³Ø
+#è¿æ¥æ± 
 spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
-#Êı¾İ¿âÃû³Æ
+#æ•°æ®åº“åç§°
 spring.datasource.url=jdbc:mysql://localhost:3306/springcloud1
-#Êı¾İ¿âÓÃ»§Ãû
+#æ•°æ®åº“ç”¨æˆ·å
 spring.datasource.username=root
-#Êı¾İ¿âÃÜÂë
+#æ•°æ®åº“å¯†ç 
 spring.datasource.password=root
-# Êı¾İ¿âÁ¬½Ó³ØµÄ×îĞ¡Î¬³ÖÁ¬½ÓÊı
+# æ•°æ®åº“è¿æ¥æ± çš„æœ€å°ç»´æŒè¿æ¥æ•°
 spring.datasource.dbcp2.min-idle=5
-# ³õÊ¼»¯Á¬½ÓÊı
+# åˆå§‹åŒ–è¿æ¥æ•°
 spring.datasource.dbcp2.initial-size=5
-# ×î´óÁ¬½ÓÊı
+# æœ€å¤§è¿æ¥æ•°
 spring.datasource.dbcp2.max-total=5
-# µÈ´ıÁ¬½Ó»ñÈ¡µÄ×î´ó³¬Ê±Ê±¼ä
+# ç­‰å¾…è¿æ¥è·å–çš„æœ€å¤§è¶…æ—¶æ—¶é—´
 spring.datasource.dbcp2.max-wait-millis=200
+
+
