--- a/microservicecloud/microservicecloud-consumer-dept-feign/src/main/resources/application.properties
+++ b/microservicecloud/microservicecloud-consumer-dept-feign/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-#¶Ë¿ÚºÅ
+#ç«¯å£å·
 server.port=80
 
-#eurekaÏà¹ØÅäÖÃ
-#ÊÇ·ñ×¢²á½øeurekaÖĞ
+#eurekaç›¸å…³é…ç½®
+#æ˜¯å¦æ³¨å†Œè¿›eurekaä¸­
 eureka.client.register-with-eureka=false
-#eurekaµÄµØÖ·
+#eurekaçš„åœ°å€
 eureka.client.service-url.defaultZone=http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+
+#feign
+feign.hystrix.enabled=true
