--- a/microservicecloud/microservicecloud-provider-dept-8002/pom.xml
+++ b/microservicecloud/microservicecloud-provider-dept-8002/pom.xml
@@ -82,5 +82,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!-- actuator监控可视化界面 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 </project>
