--- a/microservicecloud/microservicecloud-provider-dept-hystrix-8001/pom.xml
+++ b/microservicecloud/microservicecloud-provider-dept-hystrix-8001/pom.xml
@@ -87,5 +87,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
         </dependency>
+        <!-- actuator监控可视化界面 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 </project>
